# giraff

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.MD  README.md  env.sh  europar-artifacts.md  europar.tm  flake.nix  justfile  kubeconfig  lightcalculation.yml  minimal-k3s-multipass-bootstrap.sh  print.sh  redisdump.yml  roadcondition.yml  rust-toolchain  rust.nix  setlightphasecalculation.yml  trace_buildvm.txt  trace_expe_running.txt  utf8.sty  weathersensorfilter.yml
echo/: Cargo.toml  justfile
echo/src/: main.rs
enos/live/: .env  .env.big  .env.big.big  .env.big.small  .env.example  .env.experiments  .env.scenario  .env.scenario.bak  .env.small  .env.small.big  .env.small.small  .experiments.env  .gitignore  collect.py  definitions.py  expe-default.ipynb  expe-naive.ipynb  expe.ipynb  expe.py  expe.sh  experiment.Rmd  experiment.ipynb  flake.nix  integration.py  justfile  k3s.py  master.py  nb_functions.csv  nb_functions2.csv  network_shape.csv  node_levels.csv  nohup.out  prometheus.yml  pyproject.toml  save_apdex.csv  save_apdex.csv.bak  save_jitter.csv  save_jitter.csv.bak  simulator.py
enos/live/.devcontainer/: devcontainer.json
enos/live/iso/: .gitignore  README.MD  configuration.nix  flake.nix  justfile  machine-config.nix
enos/live/monitoring/: __init__.py  monitoring.py  monitoring.yml
iot_emulation/: .envrc  .gitignore  Cargo.nix  Cargo.toml  Dockerfile  dataset_audio.nix  dataset_image.nix  flake.nix  go.mod  go.sum  gomod2nix.toml  helper  helper_derive  justfile  main.go  result  rust-toolchain  rustfmt.toml  subflake.nix  toto.md
iot_emulation/.direnv/: flake-profile-1-link
iot_emulation/src/: main.rs
iso/enos/: .gitignore  collect.py  expe.sh  experiment.Rmd  experiment.html  integration.py  justfile  logs-latest  pyproject.toml
iso/enos/monitoring/: monitoring.py  monitoring.yml
manager/: .dockerignore  .envrc  .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  Dockerfile  README.MD  flake.nix  justfile  k3d.cluster.yaml  log4rs.yaml  node-situation.ron.example  prometheus.yaml  result  result-bin  rust-toolchain  rustfmt.toml  subflake.nix
manager/.devcontainer/: devcontainer.json
manager/fog_node/: Cargo.nix  Cargo.toml
manager/fog_node/src/: handler.rs  handler_http.rs  handler_rpc.rs  main.rs  monitoring.rs  prom_metrics.rs  repeated_tasks.rs  routing.rs
manager/helper/: Cargo.toml
manager/helper/src/: chrono.rs  env.rs  err.rs  init.rs  lib.rs  log_err.rs  monitoring.rs  pool.rs  prom_metrics.rs  prom_push.rs  reqwest_helper.rs
manager/helper_derive/: Cargo.toml
manager/helper_derive/src/: lib.rs
manager/kube_metrics/: Cargo.toml
manager/market/: Cargo.toml
manager/market/src/: controller.rs  handler.rs  main.rs  monitoring.rs  prom_metrics.rs
manager/model/: Cargo.toml
manager/model/src/: lib.rs
manager/openfaas/: Cargo.toml
manager/openfaas/src/: configuration.rs  default_api.rs  lib.rs
manager/src/helper/: chrono.rs  from_disk.rs  handler.rs  mod.rs
manager/src/kube_metrics/: mod.rs  node.rs  pod.rs
manager/src/model/: mod.rs
manager/src/openfaas/: configuration.rs  default_api.rs  mod.rs
node/manager/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.MD  echo  justfile  prometheus.yaml  pyproject.toml  start_node.sh  test.sh
node/manager/.cargo/: config.toml
node/manager/common_models/: Cargo.toml
node/manager/kube-metrics/: Cargo.toml
node/manager/manager/: Cargo.toml  node-situation-1.ron  node-situation-2.ron  node_situation2.ron
node/manager/market/: .gitignore  Cargo.toml
node/manager/node-logic/: Cargo.toml
node/manager/openfaas/: Cargo.toml
node/manager/openfaas_rust_client/: README.md
node/manager/routing/: Cargo.toml
node/manager/shared_models/: Cargo.toml
node/manager/sla/: Cargo.toml
node/manager/src/: lib.rs
node/manager/uom_helpers/: Cargo.toml
openfaas-functions/: .envrc  .gitignore  Cargo.toml  echo.yml  flake.nix  helper  helper_derive  justfile  model  of-watchdog-giraff-headers.patch  primes.yml  subflake.nix
openfaas-functions/.direnv/: flake-profile-1-link  flake-profile-2-link
openfaas-functions/applications/traffic-lights/: objectrecognition.yml  roadcondition.yml  setlightphasecalculation.yml
openfaas-functions/echo/: .envrc  Cargo.nix  Cargo.toml  Dockerfile  helper_derive  justfile  model  rust-toolchain  subflake.nix
openfaas-functions/echo/src/: lib.rs  main.rs
openfaas-functions/fn_echo/: .gitignore  Cargo.toml  helper  justfile  subflake.nix
openfaas-functions/fn_echo/src/: main.rs
openfaas-functions/fn_image_classification_squeezenet_cpu/: justfile  main.py  subflake.nix
openfaas-functions/fn_image_processing_pillow/: justfile  main.py  subflake.nix
openfaas-functions/fn_sentiment_analysis/: justfile  main.py  subflake.nix
openfaas-functions/fn_speech_recognition/: .envrc  README.MD  justfile  main.py  subflake.nix
openfaas-functions/image-classification-squeezenet-cpu/: main.py  subflake.nix
openfaas-functions/image-processing-pillow/: .envrc  justfile  main.py  pyproject.toml  subflake.nix
openfaas-functions/primes/: Cargo.toml
openfaas-functions/primes/src/: lib.rs
openfaas-functions/redis/: 000-namespace.yaml  100-pvc.yaml  300-service.yaml  301-external-name.yaml  400-ingress.yaml
openfaas-functions/sentiment-analysis/: main.py  pyproject.toml  subflake.nix
openfaas-functions/speech_recognition/: main.py  model  pyproject.toml  subflake.nix
openfaas-functions/src/: main.rs
openfaas-functions/template/rust-warp/: .dockerignore  Dockerfile  LICENSE-rust-warp
openfaas-functions/traffic-lights/: movementplan.yml  objectrecognition.yml  redisdump.yml  roadcondition.yml  setlightphasecalculation.yml  trafficstatistics.yml
openfaas-functions/traffic-lights/emergencydetection/: Cargo.toml
openfaas-functions/traffic-lights/movementplan/: Cargo.toml
openfaas-functions/traffic-lights/objectrecognition/: Cargo.toml
openfaas-functions/traffic-lights/redisdump/: Cargo.toml
openfaas-functions/traffic-lights/roadcondition/: Cargo.toml
(+546 files in other folders)
