[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["json"]}
serde = { version = "1.0.139", features = ["derive", "rc"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
