[package]
name = "iot_emulation"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[features]
default = ["mimalloc"]
# Enable mimalloc
mimalloc = []
# Enable jaeger
jaeger = [
    "actix-web-opentelemetry",
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-jaeger",
    "reqwest-tracing",
    "tracing-actix-web",
    "tracing-opentelemetry",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-web-opentelemetry = { version = "0.13.0", optional = true }
anyhow = "1.0.71"
# actix-web-prom = "0.6.0"
chrono = { version = "0.4.23", features = ["serde"] }
dashmap = "5.4.0"
influxdb2 = "0.4.2"
influxdb2-derive = "0.1.1"
influxdb2-structmap = "0.2"
num-traits = "0.2"
lazy_static = "1.4.0"
mimalloc = { version = "0.1.32", default-features = false }
num_cpus = "1.14.0"
opentelemetry = { version = "0.21.0", optional = true }
opentelemetry_sdk = { version = "0.21.1", features = [
    "rt-tokio",
], default-features = false, optional = true }
opentelemetry-jaeger = { version = "0.20.0", features = [
    "reqwest_collector_client",
    "rt-tokio",
], default-features = false, optional = true }
prometheus = "0.13.3"
rand = "0.8.5"
rand_distr = "0.4.3"
reqwest = { version = "0.11.22", features = ["json", "gzip"] }
# reqwest-middleware = { version = "0.2.4" }
reqwest-middleware = { git = "https://github.com/jtescher/reqwest-middleware", rev = "2538936", package = "reqwest-middleware" }
# reqwest-tracing = { version = "0.4.6", features = [
#     "opentelemetry_0_20",
# ], optional = true }
reqwest-tracing = { git = "https://github.com/jtescher/reqwest-middleware", rev = "2538936", package = "reqwest-tracing", features = [
    "opentelemetry_0_21",
], optional = true }
serde = { version = "1.0.139", features = ["derive", "rc"] }
serde_json = { version = "1.0.82", features = ["raw_value"] }
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.37"
tracing-actix-web = { version = "0.7.9", features = [
    "opentelemetry_0_21",
], optional = true }
tracing-forest = { version = "0.1.5", features = ["tokio"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.22.0", optional = true }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }

helper = { path = "./helper" }
helper_derive = { path = "./helper_derive" }
