[package]
name = "manager"
version = "0.1.0"
edition = "2021"
autobins = false

[features]
default = ["k8s"]
k8s = []
fake_k8s = []

[lib]
name = "manager"
path = "src/lib.rs"

[[bin]]
name = "fog_node"
path = "src/bin/fog_node/main.rs"

[[bin]]
name = "market"
path = "src/bin/market/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4"
env_logger = "0.9"
futures = "0.3.21"
if_chain = "1.0.2"
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
kube = { version = "0.71.0", default-features = false, features = ["client", "runtime", "rustls-tls"] }
lazy-regex = "2.3.0"
lazy_static = "1.4.0"
log = "0.4.17"
okapi = { version = "0.7.0-rc.1", features = ["impl_json_schema"] }
reqwest = { version = "0.11.11", default-features=false, features = ["json", "rustls-tls"] }
rocket  = "0.5.0-rc.2"
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "uuid"] }
rocket_prometheus = "0.10.0-rc.3"
ron = "0.7.1"
schemars = "0.8"
serde = { version = "1.0.138", features = ["derive", "rc"] }
serde_json = { version = "1.0.82", features = ["raw_value"] }
serde_with = "1.14.0"
thiserror = "1.0.31"
tokio = "1.19.2"
tokio-cron-scheduler = "0.7.4"
uom = { version = "0.32.0", default-features = false, features = [
    "f64",
    "si",
    "autoconvert",
] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

