[package]
name = "echo"
version = "0.1.0"
authors = ["Volodia PAROL-GUARINO <volodia.parol-guarino@protonmail.com>"]
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[features]
default = ["mimalloc"]

# Enable mimalloc
mimalloc = []
# Enable jaeger
jaeger = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-jaeger",
    "reqwest-tracing",
    "tracing-opentelemetry",
    "tracing-actix-web",
]


[dependencies]
actix-web = "4.4.0"
actix-web-opentelemetry = "0.16.0"
anyhow = "1.0.71"
bytes = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10"
futures = "0.3.28"
influxdb2 = "0.4.2"
influxdb2-derive = "0.1.1"
influxdb2-structmap = "0.2"
num-traits = "0.2"
lazy_static = "1.4.0"
mimalloc = { version = "0.1.32", default-features = false }
opentelemetry = { version = "0.21.0", default-features = false, optional = true }
opentelemetry_sdk = { version = "0.21.1", features = [
    "rt-tokio",
], default-features = false, optional = true }
opentelemetry-jaeger = { version = "0.20.0", features = [
    "reqwest_collector_client",
    "rt-tokio",
], default-features = false, optional = true }
reqwest = { version = "0.11.22", features = ["json", "gzip"] }
reqwest-middleware = { git = "https://github.com/jtescher/reqwest-middleware", rev = "2538936", package = "reqwest-middleware" }
reqwest-tracing = { git = "https://github.com/jtescher/reqwest-middleware", rev = "2538936", package = "reqwest-tracing", features = [
    "opentelemetry_0_21",
], optional = true }
# reqwest-tracing = { version = "0.4.6", features = [actix-web = "4.4.0"
#     "opentelemetry_0_20",
# ], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.37"
tracing-actix-web = { version = "0.7.9", features = [
    "opentelemetry_0_21",
], optional = true }
tracing-forest = { version = "0.1.5", features = ["tokio"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.22.0", optional = true }
uom = { version = "0.34.0", default-features = false, features = [
    "f64",
    "si",
    "autoconvert",
] }

helper = { path = "./helper" }
helper_derive = { path = "./helper_derive" }
model = { path = "./model" }
