[tool.poetry]
name = "live"
version = "0.1.0"
description = "Experiment facilities for the Fog"
authors = ["Volodia PAROL-GUARINO <volodia.parol-guarino@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
enoslib = { git = "https://gitlab.inria.fr/vparolgu/enoslib.git", rev = "08cfa2458e3fab5055219b35901a6d9eb8720c92" }
click = "^8.1"
alive-progress = "^3.0.1"
aiohttp = "^3.8.4"

# [tool.poetry.dev-dependencies]
# black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Fixes <clock offset="localtime"/> to utc, leading to fix of k3s certificate being generated for an jour in the future from the pov of the vm
[tool.ruff]
line-length = 150
