[tool.poetry]
name = "live"
version = "0.1.0"
description = "Experiment facilities for the Fog"
authors = ["Volodia PAROL-GUARINO <volodia.parol-guarino@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
# enoslib = { git = "https://gitlab.inria.fr/vparolgu/enoslib.git", rev = "f0c3c00a7665c2cff79b63b966f5a56b4b2ead18" }
enoslib = { git = "https://gitlab.inria.fr/discovery/enoslib.git", rev = "eb9ad3b062f34ff7d3e23a9708188a7e6664bec2" }
click = "^8.1"
cryptography = "39"
alive-progress = "^3.1.1"
attrs = "^22"
aiohttp = "^3.8.4"
influxdb-client = "^1.36.1"
simpy = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Fixes <clock offset="localtime"/> to utc, leading to fix of k3s certificate being generated for an jour in the future from the pov of the vm
[tool.ruff]
line-length = 150
