[tool.poetry]
name = "live"
version = "0.1.0"
description = "Experiment facilities for the Fog"
authors = ["VolodiaPG <volodia.parol-guarino@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
enoslib = { version = "^8.0.0*", allow-prereleases = true }
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
