[package]
name = "helper"
version = "0.1.0"
edition = "2021"

[features]
offline = []

[dependencies]
crossbeam-queue = { version = "0.3", default-features = false, features = [
    "std",
] }
actix-web = "4.4"
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.4"
chrono = "0.4"
convert_case = "0.6"
futures = "0.3"
influxdb2 = "0.4"
influxdb2-structmap = "0.2"
num-traits = "0.2"
lazy-regex = "3.1"
regex = "1.8"
lazy_static = "1.4"
nutype = { version = "0.4", features = ["serde", "regex"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
reqwest-middleware = "0.2"
ron = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "3.4"
tokio = { version = "1.28", default-features = false, features = ["time"] }
thiserror = "1.0"
tracing = "0.1"
uom = { version = "0.34", default-features = false, features = [
    "f64",
    "si",
    "autoconvert",
] }
