[package]
name = "market"
version = "0.1.0"
edition = "2021"

[features]
default = ["mimalloc"]

# Enable mimalloc
mimalloc = []
# Enable jaeger
jaeger = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-jaeger",
    "reqwest-tracing",
    "tracing-opentelemetry",
    "tracing-actix-web",
]
# See the cargo.toml of the fog node for more explanations
powerrandom = []

[dependencies]
actix-web = "4.4"
actix-web-opentelemetry = "0.16"
anyhow = "1.0"
base64 = { version = "0.13", default-features = false, features = [
    "alloc", # for base64::decode_config and base64::encode_config
] }
bytes = "1.2"
chrono = "0.4"
dashmap = "5.4"
futures = "0.3"
influxdb2 = "0.4"
influxdb2-derive = "0.1"
influxdb2-structmap = "0.2"
num-traits = "0.2"
lazy-regex = "3.1"
lazy_static = "1.4"
opentelemetry = { version = "0.21", default-features = false, optional = true }
opentelemetry_sdk = { version = "0.21", features = [
    "rt-tokio",
], default-features = false, optional = true }
opentelemetry-jaeger = { version = "0.20", features = [
    "reqwest_collector_client",
    "rt-tokio",
], default-features = false, optional = true }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "gzip"] }
reqwest-middleware = { git = "https://github.com/TrueLayer/reqwest-middleware", rev = "b53d355", package = "reqwest-middleware" }
reqwest-tracing = { git = "https://github.com/TrueLayer/reqwest-middleware", rev = "b53d355", package = "reqwest-tracing", features = [
    "opentelemetry_0_21",
], optional = true }
ron = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "3.4"
tokio = { version = "1.20", features = ["full"] }
tracing = "0.1"
tracing-actix-web = { version = "0.7", features = [
    "opentelemetry_0_21",
], optional = true }
tracing-appender = "0.2"
tracing-forest = { version = "0.1", features = ["tokio"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.22", optional = true }
uom = { version = "0.34", default-features = false, features = [
    "f64",
    "si",
    "autoconvert",
] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "serde"] }

helper = { path = "../helper" }
helper_derive = { path = "../helper_derive" }
model = { path = "../model" }
mimalloc = { version = "0.1", default-features = false }
