[package]
name = "market"
version = "0.1.0"
edition = "2021"

[features]
default = ["mimalloc"]

# Enable mimalloc
mimalloc = []
# See the cargo.toml of the fog node for more explanations
random = []
mincpurandom = []

[dependencies]
actix-web = "4.8"
actix-web-opentelemetry = "0.16"
anyhow = "1.0"
base64 = { version = "0.13", default-features = false, features = [
    "alloc",
] }
bytes = "1.7"
chrono = "0.4"
dashmap = "6.0"
futures = "0.3"
influxdb2 = "0.5"
influxdb2-derive = "0.1"
influxdb2-structmap = "0.2"
num-traits = "0.2"
lazy-regex = "3.1"
lazy_static = "1.4"
opentelemetry = { version = "0.21", default-features = false  }
opentelemetry_sdk = { version = "0.21", features = [
    "rt-tokio",
], default-features = false }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry-jaeger = { version = "0.20", features = [
    "reqwest_collector_client",
    "rt-tokio",
], default-features = false }
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json", "gzip"] }
reqwest-middleware = { version = "0.3", features = ["json"] }
reqwest-tracing = { version = "0.5", features = [
    "opentelemetry_0_21",
] }
ron = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "3.4"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-actix-web = { version = "0.7", features = [
    "opentelemetry_0_21",
]}
tracing-appender = "0.2"
tracing-forest = { version = "0.1", features = ["tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.22" }
uom = { version = "0.36", default-features = false, features = [
    "f64",
    "rational64",
    "si",
    "autoconvert",
] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "serde"] }

helper = { path = "../helper" }
helper_derive = { path = "../helper_derive" }
model = { path = "../model" }
mimalloc = { version = "0.1", default-features = false }
