[package]
name = "model"
version = "0.1.0"
edition = "2021"

[features]
mincpurandom = []
offline = []

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dashmap = "6.0"
lazy-regex = "3.1"
lazy_static = "1.4"
num-rational = "0.4.2"
nutype = { version = "0.4", features = ["regex"] }
ron = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "3.4"
skiplist = "0.5"
thiserror = "1.0"
uom = { version = "0.36", default-features = false, features = [
    "f64",
    "rational64",
    "si",
    "autoconvert",
] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "serde"] }
helper = { path = "../helper" }
