[package]
name = "openfaas"
version = "0.1.0"
edition = "2021"

[features]
# Enable jaeger
jaeger = ["reqwest-middleware", "reqwest-tracing"]

[dependencies]
anyhow = "1.0.58"
bytes = "1.2.0"
chrono = "0.4"
lazy-regex = "2.3.0"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json", "gzip"] }
reqwest-middleware = { version = "0.2.0", optional = true }
reqwest-tracing = { version = "0.4.0", features = [
    "opentelemetry_0_18",
], optional = true }
ron = "0.8.0"
serde = { version = "1.0.140", features = ["derive", "rc"] }
serde_json = { version = "1.0.82", features = ["raw_value"] }
serde_with = "2.0.0"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.37"
uom = { version = "0.33.0", features = ["f64", "si", "autoconvert"] }

helper = { path = "../helper" }
