[package]
name = "openfaas"
version = "0.1.0"
edition = "2021"

[features]
# Enable jaeger
jaeger = ["reqwest-tracing"]

[dependencies]
reqwest-middleware = { git = "https://github.com/jtescher/reqwest-middleware", rev = "2538936", package = "reqwest-middleware" }
reqwest-tracing = { git = "https://github.com/jtescher/reqwest-middleware", rev = "2538936", package = "reqwest-tracing", features = [
    "opentelemetry_0_21",
], optional = true } # reqwest-tracing = { version = "0.4.6", features = [anyhow = "1.0.58"
bytes = "1.2.0"
chrono = "0.4"
lazy-regex = "3.1.0"
log = "0.4.17"
reqwest = { version = "0.11.22", features = ["json", "gzip"] }
#     "opentelemetry_0_20",
# ], optional = true }
ron = "0.8.0"
serde = { version = "1.0.140", features = ["derive", "rc"] }
serde_json = { version = "1.0.82", features = ["raw_value"] }
serde_with = "3.4.0"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.37"
uom = { version = "0.34.0", features = ["f64", "si", "autoconvert"] }

helper = { path = "../helper" }
