[package]
name = "openfaas"
version = "0.1.0"
edition = "2021"

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
reqwest-middleware = { version = "0.3", features = ["json"] }
reqwest-tracing = { version = "0.5", features = [
    "opentelemetry_0_21",
]}
bytes = "1.7"
chrono = "0.4"
lazy-regex = "3.1.0"
log = "0.4.17"
reqwest = { version = "0.12", features = ["json", "gzip"] }
ron = "0.8.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "3.4.0"
thiserror = "1.0.31"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1.37"
uom = { version = "0.36", features = ["f64", "si"] }

helper = { path = "../helper" }
